--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
 name = "bf-jit"
 version = "0.1.0"
-authors = ["liangyongrui <liangyongrui@kuaishou.com>"]
+authors = ["liangyongrui <liangyongrui@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 dynasmrt = "1.0"
-structopt = "0.3"
 thiserror = "1.0"
